[package]
name = "sl-up"
version = "0.1.1"
edition = "2021"
authors = ["Roy Rothenberg <royrothenberg@gmail.com>"]
repository = "https://github.com/vuduchild/sl-up"
license = "GPL-3.0-or-later"
description = """
An interactive TUI smartlog for Sapling SCM, like git-sl-up but written in Rust.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-parser = "0.9.0"
crossterm = "0.27.0"
enum_dispatch = "0.3.13"
